--- a/NeuronS - GitHub/sonar-project.properties
+++ b/NeuronS - GitHub/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=neuron
 sonar.projectName=Neuron
 sonar.projectVersion=1.0
  
-sonar.host.url=http://sonar.protean.pl:9000
+sonar.host.url=https://sonar.protean.pl
 sonar.login=6accd5ef749a618153675cddfcde78bc6987181d
 
 #sonar.language=php
