--- a/NeuronS - GitHub/sonar-project.properties
+++ b/NeuronS - GitHub/sonar-project.properties
@@ -14,4 +14,4 @@ sonar.login=6accd5ef749a618153675cddfcde78bc6987181d
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
  
-sonar.exclusions=vendor/**
+sonar.exclusions=vendor/**, "czcionki fontello/**"
