dodanie ikony zamykania inputa

--- a/NeuronS - GitHub/czcionki fontello/config.json
+++ b/NeuronS - GitHub/czcionki fontello/config.json
@@ -77,6 +77,12 @@
       "css": "download",
       "code": 61486,
       "src": "mfglabs"
+    },
+    {
+      "uid": "c709da589c923ba3c2ad48d9fc563e93",
+      "css": "cancel",
+      "code": 59397,
+      "src": "entypo"
     }
   ]
 }
